force-app/main/default/objects/Envelope_Event__c/Envelope_Event__c.object-meta.xml
<CustomObject>
    <label>Envelope Event</label>
    <pluralLabel>Envelope Events</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Envelope Event Name</label>
        <displayFormat>EE-{00000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>