force-app/main/default/objects/Envelope_Event__c/fields/Envelope__c.field-meta.xml
<CustomField>
    <fullName>Envelope__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Envelope</label>
    <referenceTo>Envelope__c</referenceTo>
    <relationshipLabel>Envelope Events</relationshipLabel>
    <relationshipName>Envelope_Envelope_Events</relationshipName>
    <type>Lookup</type>
</CustomField>