force-app/main/default/objects/Envelope_Event__c/fields/Envelope_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Envelope_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Envelope Recipient</label>
    <referenceTo>Envelope_Recipient__c</referenceTo>
    <relationshipLabel>Envelope Events</relationshipLabel>
    <relationshipName>Envelope_Recipient_Envelope_Events</relationshipName>
    <type>Lookup</type>
</CustomField>