force-app/main/default/objects/Envelope_Event__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <externalId>true</externalId>
    <label>Event ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>