force-app/main/default/objects/Envelope_Event__c/fields/Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Object_Id__c</fullName>
    <label>Object Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>